--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/conversation/conversation"
+    "pages/conversation/conversation",
+    "pages/test/test"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
