--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 flask==2.0.1
+flask-cors==3.0.10
 transformers==4.31.0
 torch==2.0.1
 numpy==1.24.3
 sentencepiece==0.1.99
+waitress==2.1.2
+python-dotenv==1.0.0
